2018-01-11  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

2018-01-10  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.40 released.

2018-01-09  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.39 released.

2018-01-09  Carl Hetherington  <cth@carlh.net>

	* Fix appearance controls for subtitles from DCP files (#1162).

2018-01-08  Carl Hetherington  <cth@carlh.net>

	* When doing jump-to-selected, jump to the first subtitle
	in any text subtitle content (#1160).

2018-01-07  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

	* Version 2.11.38 released.

2018-01-07  Carl Hetherington  <cth@carlh.net>

	* Make certificate re-creation cancellable and default nags
	to not going away (#1158).

2018-01-06  Carl Hetherington  <cth@carlh.net>

	* Check that we can decrypt a DKDM when it is loaded into
	the KDM creator (#1011).

	* Fix crash in some cases when an incorrect KDM has been
	added to a DCP (#1000).

	* Updated de_DE translation from Carsten Kurz.

	* Fix playhead wandering on some operations (#1112).

	* Simplify user interface for managing keys.

	* Version 2.11.37 released.

2018-01-06  Carl Hetherington  <cth@carlh.net>

	* Add version number to encode server welcome message (#1157).

	* Updated nl_NL translation from Rob van Nieuwkerk.

2018-01-05  Carl Hetherington  <cth@carlh.net>

	* Add copy and paste for settings (#1051).

	* Fix hanging subtitles in some cases (#1101).

	* Version 2.11.36 released.

2018-01-04  Carl Hetherington  <cth@carlh.net>

	* Put up a token (unspecific) progress bar during import
	of image folders (#987).

	* Apply filters to preview immediateley (#1019).

	* Set up a default KDM write mode and preselect the last used
	one when re-opening the KDM window (#1137).

2018-01-03  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.35 released.

2018-01-02  Carl Hetherington  <cth@carlh.net>

	* Add rewind-to-zero button to player.
